--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- navbar -->
       
       <nav id='navScrollspy' class="navbar-expand-lg navbar fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#top"><img src="/images/bandlogo.png"></a>
+        <a class="navbar-brand" href="#top"><img src="images/bandlogo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCodeply" aria-controls="navbarCodeply" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,19 +57,19 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100 imgCarousel" src="/images/band1.jpg" alt="First slide">
+              <img class="d-block w-100 imgCarousel" src="images/band1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 imgCarousel" src="/images/band2.jpg" alt="Second slide">
+              <img class="d-block w-100 imgCarousel" src="images/band2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 imgCarousel" src="/images/band3.jpg" alt="Third slide">
+              <img class="d-block w-100 imgCarousel" src="images/band3.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 imgCarousel" src="/images/band4.jpg" alt="Third slide" >
+              <img class="d-block w-100 imgCarousel" src="images/band4.jpg" alt="Third slide" >
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 imgCarousel" src="/images/band5.jpg" alt="Third slide" >
+              <img class="d-block w-100 imgCarousel" src="images/band5.jpg" alt="Third slide" >
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
