--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               </div>
             </div>
             <!-- Image of location/map -->
-            <img src="/images/map.jpg" style="width:100%">
+            <img src="images/map.jpg" style="width:100%">
 
 
             <!-- footer -->
